v1.25.6/ingress-nginx/examples/03-ingress-gray-cannay-userrequest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: myapp-v2
  template:
    metadata: 
      labels:
        k8s-app: myapp-v2
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v2
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    k8s-app: myapp-v2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-v2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"   # 要开启灰度发布机制，首先需要启用 Canary
    nginx.ingress.kubernetes.io/canary-by-header-value: newVersion 
    #  while true;do curl -s -H "canary: newVersion" http://myapp.linux.io;sleep 1;done
    #  当用户请求头部满足canary: newVersion，所有请求都会呗路由到new版本 v2 上去
    nginx.ingress.kubernetes.io/canary-by-header: canary  # 基于header的流量切分
    nginx.ingress.kubernetes.io/canary-weight: "30"  # 会被忽略，因为配置了 canary-by-headerCanary版本
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.linux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-v2
            port:
              number: 80
