v1.25.6/ingress-nginx/examples/03-ingress-gray-cannay-weight.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: myapp-v2
  template:
    metadata: 
      labels:
        k8s-app: myapp-v2
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v2
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    k8s-app: myapp-v2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-v2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"   # 要开启灰度发布机制，首先需要启用 Canary
    nginx.ingress.kubernetes.io/canary-weight: "30"  # 分配30%流量到当前Canary版本
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.linux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-v2
            port:
              number: 80
