v1.25.6/ingress-nginx/examples/03-ingress-gray-cannay.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: myapp-v1
  template:
    metadata: 
      labels:
        k8s-app: myapp-v1
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    k8s-app: myapp-v1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-v1
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.linux.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-v1
            port:
              number: 80
